--- a/main.html
+++ b/main.html
@@ -6,7 +6,17 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 
-<body>
+
+	<body style="background-color: yellow; text-align: center;">
+    <div>
+      <h1 id="f1">Flower Photos</h1>
+      <p>Here are some beautiful pictures of different flowers.</p>
+    </div>
+    <div>
+      <h1 id="f2">Rose Pictures</h1>
+      <p>Roses are one of the most popular flowers in the world. They come in many colors and varieties.</p>
+    </div>
+
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
