--- a/main.html
+++ b/main.html
@@ -9,11 +9,11 @@
 
 	<body style="background-color: yellow; text-align: center;">
     <div>
-      <h1 id="f1">Flower Photos</h1>
+      <h1 id="f1">Flowers photos</h1>
       <p>Here are some beautiful pictures of different flowers.</p>
     </div>
     <div>
-      <h1 id="f2">Rose Pictures</h1>
+      <h1 id="f2">Roses picture</h1>
       <p>Roses are one of the most popular flowers in the world. They come in many colors and varieties.</p>
     </div>
 
