--- a/main.html
+++ b/main.html
@@ -7,12 +7,13 @@
 </head>
 
 
-	<body style="background-color: yellow; text-align: center;">
-    <div>
+	<body >
+		
+    <div style="background-color: yellow; text-align: center;">
       <h1 id="f1">Flowers photos</h1>
       <p>Here are some beautiful pictures of different flowers.</p>
     </div>
-    <div>
+    <div style="background-color: yellow; text-align: center;">
       <h1 id="f2">Roses picture</h1>
       <p>Roses are one of the most popular flowers in the world. They come in many colors and varieties.</p>
     </div>
